// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > loading > should render the small loading state when size is small 1`] = `
<div>
  <div
    class="buttonContainer variantPrimary surfaceBrand intentDefault sizeSmall"
  >
    <button
      data-testid="test-my-button-button"
      disabled=""
      id="my-button"
      name="my-button"
      type="button"
    >
      <div
        class="loadingSpinner"
      >
        <div />
        <div />
        <div />
      </div>
    </button>
  </div>
</div>
`;

exports[`Button > rendering > should render with the default variant, surface, intent and size 1`] = `
<div>
  <div
    class="buttonContainer variantPrimary surfaceBrand intentDefault"
  >
    <button
      data-testid="test-my-button-button"
      id="my-button"
      name="my-button"
      type="button"
    >
      <span>
        My Button
      </span>
    </button>
  </div>
</div>
`;
